src/test/deca/context/valid/class/valid_method_class.deca
// Description:
//    Test of a class declaration with fields and extend
//    Test rule 1.3
//
// Result:
//      All good ! :D
//
// History:
//    created on 09/01/2025

class Dummy {
    int a = 5;
    float b = 5.0;
    boolean c = true;

    int method(int a) {
        boolean d = true;
        int e = 5;
        float f = 5.0;
        if (d) {
            println("All good ! :D");
            return a;
        }
        return this.a;
    }

    boolean secondMethod() {

    }
}

{
    println("All good ! :D");
}
